<resources>
    <string name="app_name">NMedia</string>
    <string name="main_text">NMedia!</string>
    <string name="title_more_view_text" translatable="false">title more view text</string>
    <string name="post_watched_view_text" translatable="false">post_watched_view_text</string>
    <string name="post_share_view" translatable="false">post_share_view</string>
    <string name="post_likes_view" translatable="false">post_likes_view</string>
    <string name="post_avatar_view" translatable="false">Нетология. Университет будущего</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="article" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интесивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам от новичков до уверенных профессионалов. Но самое ваное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен - http://netolo.gy/fyb</string>
    <string name="likes" translatable="false">10</string>
    <string name="shared" translatable="false">5</string>
    <string name="watched" translatable="false">5</string>
</resources>
