<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/post_avatar_view"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/published"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/title_more_view_text"
        android:src="@drawable/ic_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        app:layout_constraintBottom_toTopOf="@id/article"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:autoLink="all"
        android:text="@string/article"
        app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"
        tools:text="@sample/posts.json/data/article" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:layout_constraintBottom_toTopOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/article" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_likes_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:srcCompat="@drawable/ic_like_24" />

    <TextView
        android:id="@+id/like_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/likes"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        tools:text="@sample/posts.json/data/likes" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_share_view"
        app:layout_constraintStart_toEndOf="@id/like_counter"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:srcCompat="@drawable/ic_share_24" />

    <TextView
        android:id="@+id/share_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/shared"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/share"
        app:layout_constraintBottom_toBottomOf="@id/share"
        tools:text="@sample/posts.json/data/share" />

    <TextView
        android:id="@+id/watched_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/watched"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/watched"
        app:layout_constraintBottom_toBottomOf="@id/watched"
        tools:text="@sample/posts.json/data/watched" />

    <ImageButton
        android:id="@+id/watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_watched_view_text"
        app:layout_constraintEnd_toStartOf="@id/watched_counter"
        app:layout_constraintTop_toBottomOf="@id/bottom_barrier"
        app:srcCompat="@drawable/ic_watched_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
